--- a/taskmaster/app/src/main/res/layout/activity_add_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_add_task.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/myTask"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -48,7 +48,7 @@
         android:layout_marginTop="45dp"
         android:text="@string/taskDesc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myTask" />
+        app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <EditText
         android:id="@+id/doTask"
