--- a/taskmaster/app/src/main/res/layout/activity_detail_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_detail_task.xml
@@ -32,4 +32,18 @@
         app:layout_constraintTop_toBottomOf="@+id/title"
         style="@style/CustomText"
         />
+
+    <TextView
+        android:id="@+id/state"
+        style="@style/CustomText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="416dp"
+        android:padding="30dp"
+        android:text="state"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
