--- a/taskmaster/app/src/main/res/layout/activity_main.xml
+++ b/taskmaster/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         style="@style/CustomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="82dp"
+        android:layout_marginStart="108dp"
         android:text="TextView"
         android:textColor="@color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/tasks"
@@ -22,56 +22,44 @@
         style="@style/CustomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="52dp"
         android:text="Tasks"
         app:layout_constraintStart_toEndOf="@+id/username"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_task1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="36dp"
-        android:text="@string/Task1"
-        android:textColor="@color/button_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasks" />
 
     <Button
-        android:id="@+id/btn_task2"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:text="@string/Task2"
-        android:textColor="@color/button_text"
-        app:layout_constraintEnd_toEndOf="@+id/btn_task1"
-        app:layout_constraintTop_toBottomOf="@+id/btn_task1" />
+        android:layout_marginStart="57dp"
+        android:layout_marginBottom="22dp"
+        android:text="@string/addTask"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
+        app:layout_constraintStart_toStartOf="@+id/recycler_view" />
 
     <Button
-        android:id="@+id/btn_task3"
+        android:id="@+id/allButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Task3"
-        android:textColor="@color/button_text"
-        app:layout_constraintStart_toStartOf="@+id/btn_task2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_task2" />
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="22dp"
+        android:text="@string/allTask"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
+        app:layout_constraintEnd_toEndOf="@+id/recycler_view" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="193dp"
+        android:background="@color/white"
+        android:scrollbars="vertical"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_task3"
-        app:srcCompat="@drawable/task" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
