--- a/taskmaster/app/src/main/res/values/style.xml
+++ b/taskmaster/app/src/main/res/values/style.xml
@@ -4,4 +4,11 @@
     <item name="android:textSize">20sp</item>
     <item name="android:textColor">#008</item>
     </style>
+
+
+    <!--    Card view style-->
+    <style name="CardViewStyle" parent="CardView">
+        <item name="cardCornerRadius">10dp</item>
+        <item name="cardElevation">4dp</item>
+    </style>
 </resources>
