--- a/taskmaster/app/src/main/res/layout/activity_all_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_all_task.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="TextView"
+        android:text="@string/Alltext"
         app:layout_constraintBottom_toTopOf="@+id/textDesc"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
