--- a/taskmaster/app/src/main/res/menu/main.xml
+++ b/taskmaster/app/src/main/res/menu/main.xml
@@ -7,5 +7,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item android:id="@+id/action_logout"
+        android:title="@string/logout"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
