--- a/taskmaster/app/src/main/res/layout/activity_all_task.xml
+++ b/taskmaster/app/src/main/res/layout/activity_all_task.xml
@@ -19,17 +19,19 @@
 
     <TextView
         android:id="@+id/textView"
-        style="@style/CustomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
+        android:fontFamily="@font/indigo_daisy"
         android:text="@string/allTask"
+        android:textAlignment="center"
+        android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.364"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.477" />
+        app:layout_constraintVertical_bias="0.731" />
 
     <TextView
         android:id="@+id/textTitle"
@@ -76,5 +78,8 @@
         app:layout_constraintHorizontal_bias="0.821"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.959" />
+        app:layout_constraintVertical_bias="0.959"
+        android:background="@drawable/btn_custom"
+        android:fontFamily="@font/roboto_regular"
+        android:textColor="@android:color/white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
