--- a/taskmaster/app/src/main/res/values/style.xml
+++ b/taskmaster/app/src/main/res/values/style.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<resources>-->
+<!--    <style name="CustomText" >-->
+<!--    <item name="android:textSize">20sp</item>-->
+<!--    <item name="android:textColor">#008</item>-->
+<!--    </style>-->
+
+
+<!--    &lt;!&ndash;    Card view style&ndash;&gt;-->
+<!--    <style name="CardViewStyle" parent="CardView">-->
+<!--        <item name="cardCornerRadius">10dp</item>-->
+<!--        <item name="cardElevation">4dp</item>-->
+<!--    </style>-->
+<!--</resources>-->
+
 <resources>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+    </style>
+
     <style name="CustomText" >
-    <item name="android:textSize">20sp</item>
-    <item name="android:textColor">#008</item>
-    </style>
-
-
-    <!--    Card view style-->
-    <style name="CardViewStyle" parent="CardView">
-        <item name="cardCornerRadius">10dp</item>
-        <item name="cardElevation">4dp</item>
-    </style>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#008</item>
+        </style>
+    <style name="CardViewStyle" parent="CardView">-->
+            <item name="cardCornerRadius">10dp</item>
+            <item name="cardElevation">4dp</item>
+        </style>
 </resources>
